# demo-erp-mcp

./: .cursorindexingignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start.sh
scripts/: load_to_sql.py  make_samples.py  prepare_sql_mcp_db.sh
sql_mcp/: __init__.py  server.py
src/crm_agent/: .env.example  __init__.py  agent.py
tests/: test_load_to_sql.py
